[gd_scene load_steps=14 format=2]

[ext_resource path="res://core/characters/enemies/shield/Shield.gd" type="Script" id=1]
[ext_resource path="res://core/characters/enemies/shield/shield_movement_resource.tres" type="Resource" id=2]
[ext_resource path="res://core/characters/enemies/shield/shield_core_data.tres" type="Resource" id=3]
[ext_resource path="res://assets/enemies/enemyBlue1.png" type="Texture" id=4]
[ext_resource path="res://core/characters/modules/health/Health.tscn" type="PackedScene" id=5]
[ext_resource path="res://core/characters/modules/debug/Debug.tscn" type="PackedScene" id=6]
[ext_resource path="res://core/characters/enemies/shield/ShieldField.gd" type="Script" id=7]
[ext_resource path="res://assets/enemies/blue circle.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 1257.68

[sub_resource type="CircleShape2D" id=2]
radius = 604.397

[sub_resource type="CircleShape2D" id=3]
radius = 130.004

[sub_resource type="Animation" id=5]
resource_name = "change_to_blue"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.321569, 1, 0.0431373, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "change_to_green"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.321569, 1, 0.0431373, 1 ) ]
}

[node name="Shield" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
movement = ExtResource( 2 )
data = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 4 )

[node name="Muzzle" type="Position2D" parent="Sprite"]
position = Vector2( 0, 51.491 )
rotation = 1.5708

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = -1.5708
polygon = PoolVector2Array( -28.5486, -41.4879, -43.0443, -16.278, -24.7671, 36.6629, -15.9436, 36.0327, -13.4226, 8.30173, 18.0898, 10.1925, 11.7874, 30.9907, 21.8713, 36.6629, 43.2998, -17.5385, 26.2831, -41.4879, 11.1571, -32.6644, 10.5269, -25.1015, -6.48984, -24.4712, -9.64108, -32.6644 )

[node name="SeekArea" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SeekArea"]
shape = SubResource( 1 )

[node name="PursuitArea" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PursuitArea"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="TimerRPM" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Health" parent="." instance=ExtResource( 5 )]

[node name="Debug" parent="." instance=ExtResource( 6 )]
enabled = false

[node name="ShieldField" type="Area2D" parent="."]
editor/display_folded = true
collision_layer = 8
collision_mask = 4
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="ShieldField"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShieldField"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ShieldField"]
anims/change_to_blue = SubResource( 5 )
anims/change_to_green = SubResource( 4 )

[node name="TimerColorChange" type="Timer" parent="ShieldField"]
wait_time = 5.0
[connection signal="body_entered" from="SeekArea" to="." method="_on_SeekArea_body_entered"]
[connection signal="body_exited" from="SeekArea" to="." method="_on_SeekArea_body_exited"]
[connection signal="body_entered" from="PursuitArea" to="." method="_on_PursuitArea_body_entered"]
[connection signal="body_exited" from="PursuitArea" to="." method="_on_PursuitArea_body_exited"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="TimerRPM" to="." method="_on_TimerRPM_timeout"]
[connection signal="health_depleated" from="Health" to="." method="_on_Health_health_depleated"]
[connection signal="area_entered" from="ShieldField" to="ShieldField" method="_on_ShieldField_area_entered"]
[connection signal="animation_finished" from="ShieldField/AnimationPlayer" to="ShieldField" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ShieldField/TimerColorChange" to="ShieldField" method="_on_TimerColorChange_timeout"]
